Fixed overflowing logo issue on mobile

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -119,7 +119,7 @@ a {
     width: 500px;
     background-color: transparent;
     z-index: 0;
-    position: absolute;
+    // position: absolute;
     top: 0;
 
     &:first-child {
