--- a/scss/_resources.scss
+++ b/scss/_resources.scss
@@ -1,5 +1,6 @@
 .resource-cards {
   padding: 25px 0;
+  overflow: hidden;
 }
 
 .toggle-row {
